--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                      <li class="mb-2  fs-md-6 list-unstyled text-primary fw-bold">前端 : CSS、BootStrap5、Sass、JavaScript、JQuery、React<br></li>
                       <div class="div">
                         <ul class="lh-lg">
-                          <li>重視 Html structure、語意化標籤的撰寫。</li>
+                          <li>重視 HTML structure、語意化標籤的撰寫。</li>
                           <li>能依設計稿手刻頁面版型、使用 CSS 常用的動畫效果。</li>
                           <li>Bootstrap5 、 SASS 開發經驗、建立 RWD 響應式網頁。</li>
                           <li>了解並會使用 ES6 語言。</li>
