增加project weather_table連結

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                       </ul>
                      </div>
                       <p class="mb-1  pb-1 py-lg-2 subTitle">
-                        <span class="skill-string">PHP</span>
-                        <span class="skill-string">MySQL</span>
+                        <span class="skill-string text-dark fw-bold px-2 py-1">PHP</span>
+                        <span class="skill-string text-dark fw-bold px-2 py-1">MySQL</span>
                       </p>
                       <ul class="fs-8 ">
                         <li>結合前後端開發而成的履歷表系統。</li>
@@ -227,7 +227,7 @@
                  </ul>
                 </div>
                  <p class="mb-1  pb-1 py-lg-2 subTitle">
-                   <span class="skill-string">REACT</span>
+                   <span class="skill-string text-dark fw-bold px-2 py-1">REACT</span>
                  </p>
                    <ul  class="fs-8">
                      <li>使用React開發，開發時程約兩周，於2021/2完成。</li>
@@ -254,9 +254,9 @@
                 </ul>
                </div>
                 <p class="pb-1 py-lg-2 mb-1 subTitle">
-                  <span class="skill-string">Bootstrap5</span>
-                  <span class="skill-string">Sass(scss)</span>
-                  <span class="skill-string">RWD</span>
+                  <span class="skill-string text-dark fw-bold px-2 py-1">Bootstrap5</span>
+                  <span class="skill-string text-dark fw-bold px-2 py-1">Sass(scss)</span>
+                  <span class="skill-string text-dark fw-bold px-2 py-1">RWD</span>
                   </p>
                   <ul  class="fs-8">
                     <li>靜態頁面募資網站。</li>
@@ -281,8 +281,8 @@
                   </ul>
                  </div>
                   <p class="mb-1  pb-1 py-lg-2 subTitle">
-                    <span class="skill-string">JavaScript</span>
-                    <span class="skill-string">JQuery</span>
+                    <span class="skill-string text-dark fw-bold px-2 py-1">JavaScript</span>
+                    <span class="skill-string text-dark fw-bold px-2 py-1">JQuery</span>
                   </p>
                     <ul  class="fs-8">
                       <li>使用JQuery操作dom元素，利用添加class將資料分類渲染於不同畫面。</li>
@@ -307,7 +307,7 @@
                 </ul>
                </div>
                 <p class="mb-1 pb-1 py-lg-2 subTitle">
-                  <span class="skill-string">PHP</span>
+                  <span class="skill-string text-dark fw-bold px-2 py-1">PHP</span>
                 </p>
                   <ul  class="fs-8">
                     <li>從php函式得到時間資訊。</li>
@@ -317,6 +317,29 @@
               </div>
             </div>     
         </li>
+
+        <li  data-aos="fade-up" 
+        class="col-md-6 col-lg-4 p-3">
+         <div class="item p-2  bg-white ">
+           <div class="img04 img"></div>
+           <div class="col-text">
+             <div class="my-1 box titleBox d-flex justify-content-center align-items-center ">
+               <div class="fs-6 title d-inline-block me-2 ">天氣預報查詢</div> 
+               <ul style="width: 70px" class="mt-1 project-link d-flex align-items-center icon justify-content-around text-center">
+                   <li><a  href="https://github.com/a120220ms25/weather_table" target="_blank"><i class="fab fa-github"></i></a></li>
+                   <li><a href="https://a120220ms25.github.io/weather_table/" target="_blank"><i class="fa fa-link"></i></a></li>
+               </ul>
+              </div>
+               <p class="mb-1 pb-1 py-lg-2 subTitle">
+                 <span class="skill-string text-dark fw-bold px-2 py-1">OpenData API 串接</span>
+               </p>
+                 <ul  class="fs-8">
+                   <li>編寫 Ajax 取得 JSON 數據。</li>
+                   <li>使用 DataTables.JS 套件進行視覺美化。</li>
+                 </ul>
+             </div>
+           </div>     
+       </li>
   
      
 
