調正手機關於我版面大小

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
           <!-- 照片 -->
           <div class="main-photo mt-5 col-md-5 mb-5  mb-md-0 shake-slow  mt-md-0"></div>
           <!-- 文字部分 -->
-          <div class="main-text col-md-7 ">
-         
+          <div class="main-text col-md-7 col-11">
             <!-- sabrina  -->
             <h1 class="main-title text-dark">
               <span class="fs-1 word">Sabrina</span>
