--- a/index.html
+++ b/index.html
@@ -128,6 +128,32 @@
                        </div>
                      </div>     
                  </li>
+
+               <!-- api -->
+                 <li  data-aos="fade-up" 
+                 class="col-md-6 col-lg-4 p-3">
+                  <div class="item p-2  bg-white ">
+                    <div class="img04 img"></div>
+                    <div class="col-text">
+                      <div class="my-1 box titleBox d-flex justify-content-center align-items-center ">
+                        <div class="fs-6 title d-inline-block me-2  fw-bold">台灣景點旅遊網站</div> 
+                        <ul style="width: 70px" class="mt-1 project-link d-flex align-items-center icon justify-content-around text-center">
+                            <li><a  href="https://github.com/a120220ms25/travelWebsite" target="_blank"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://a120220ms25.github.io/travelWebsite/" target="_blank"><i class="fa fa-link"></i></a></li>
+                        </ul>
+                       </div>
+                        <p class=" d-flex justify-content-center align-items-center py-lg-2 subTitle">
+                          <span class="skill-string text-dark fw-bold px-2 py-1">OpenData API 串接</span>
+                        </p>
+                          <ul  class="fs-8">
+                            <li>編寫 Ajax 取得 JSON 數據。</li>
+                            <li>整合Google Analytics套件，利用網站流量統計服務，進行使用者分析。</li>
+                            <li>使用 DataTables.JS 進行視覺美化。</li>
+                            <li>Banner製作。</li>
+                          </ul>
+                      </div>
+                    </div>     
+                </li>
    
             <!-- project -->
             <li  data-aos="fade-up" 
@@ -234,28 +260,7 @@
                </div>     
            </li>
    
-           <li  data-aos="fade-up" 
-           class="col-md-6 col-lg-4 p-3">
-            <div class="item p-2  bg-white ">
-              <div class="img04 img"></div>
-              <div class="col-text">
-                <div class="my-1 box titleBox d-flex justify-content-center align-items-center ">
-                  <div class="fs-6 title d-inline-block me-2  fw-bold">天氣預報查詢</div> 
-                  <ul style="width: 70px" class="mt-1 project-link d-flex align-items-center icon justify-content-around text-center">
-                      <li><a  href="https://github.com/a120220ms25/weather_table" target="_blank"><i class="fab fa-github"></i></a></li>
-                      <li><a href="https://a120220ms25.github.io/weather_table/" target="_blank"><i class="fa fa-link"></i></a></li>
-                  </ul>
-                 </div>
-                  <p class=" d-flex justify-content-center align-items-center py-lg-2 subTitle">
-                    <span class="skill-string text-dark fw-bold px-2 py-1">OpenData API 串接</span>
-                  </p>
-                    <ul  class="fs-8">
-                      <li>編寫 Ajax 取得 JSON 數據。</li>
-                      <li>使用 DataTables.JS 套件進行視覺美化。</li>
-                    </ul>
-                </div>
-              </div>     
-          </li>
+         
          </ul>
        </div>   
      </div>
