更新文字內容

--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
             社會福利學系畢業。畢業後從事社工工作約四年時間，前一份工作是眼鏡公司門市店長。結合社工及服務業的經驗，善於傾聽，也有許多溝通協調的歷練。能獨立作業也喜歡團隊合作。
             </p>
             <p>
-              雖非相關科系出生，但參與過巨匠電腦JAVA全端程式設計班，目前正在職訓局PHP資料庫網頁設計班上課中，專業受訓超過1000小時，考取Oracle-OCPJP證照。</p>
+             目前在職訓局進修，透過半年的期間扎實的學習。課程內容包含HTML、CSS、BootStrap、JavaStrap、JQuery 和後端基礎 PHP、MySQL。
+             </p>
               <p>
-               課程外，亦透過自學及社群參與，和業界工程師交流、學習，持續精進自己。以下是我的作品，請不吝給予指教，謝謝。</p>
+               課程外，亦透過自學及社群參與，和業界工程師交流、學習 React 和 SCSS，持續精進自己。以下是我的作品，請不吝給予指教，謝謝。</p>
           </div>
         </div>
       </div>
