內容文字修改

--- a/index.html
+++ b/index.html
@@ -64,27 +64,22 @@
       </nav>
     </header>
     <!-- 大照片主要內容區域main -->
-    <div class="main about content pt-8 mb-3 mb-md-0 pb-0 pt-md-10">
+    <div class="main about content pt-8 mb-3 mb-md-0 pb-8 pt-md-10">
       <div class="container">
-        <div class="main row justify-content-around">
+        <div class="main row justify-content-evenly">
           <!-- 照片 -->
           <div class="main-photo mt-5 col-md-5 mb-5  mb-md-0 shake-slow  mt-md-0"></div>
           <!-- 文字部分 -->
           <div class="main-text col-md-7 col-11">
             <!-- sabrina  -->
             <h1 class="main-title text-dark">
-              <span class="fs-1 word">Sabrina</span>
-              <span class="fs-1 word ">Chen</span>            
+              <span class="fs-3 word">Sabrina</span>
+              <span class="fs-3 word ">Chen</span>            
             </h1>
-            <p class="text-dark fs-5 pe-2 fw-bold">你好，我是陳渝涵 Sabrina <a class="fs-4" href="https://github.com/a120220ms25" target="blank"> <i class="fs-4 fab fa-github pb-2 text-dark d-inline">&nbsp;&nbsp;</i></a></p>            
-            <p>
-            社會福利學系畢業。畢業後從事社工工作約四年時間，前一份工作是眼鏡公司門市店長。結合社工及服務業的經驗，善於傾聽，也有許多溝通協調的歷練。能獨立作業也喜歡團隊合作。
-            </p>
-            <p>
-              目前在職訓局進修，透過半年的期間扎實的學習。熟悉 HTML、CSS、BootStrap、JavaScript 和基礎後端 PHP、MySQL。
-             </p>
-              <p>
-               課程外，亦透過自學及社群參與，和業界工程師交流、學習 React 和 SCSS，持續精進自己。以下是我的作品，請不吝給予指教，謝謝。</p>
+            <p class="text-dark fs-5 pe-2 ">您好，我是陳渝涵<a class="fs-4" href="https://github.com/a120220ms25" target="blank"> <i class="fs-4 fab fa-github pb-2 text-dark d-inline">&nbsp;&nbsp;</i></a></p>                   
+            <p class="text-gray">職訓局 PHP 網頁設計班進修，透過半年的期間扎實的學習。<span class="text-dark">熟悉 HTML、CSS、BootStrap、JavaScript 和後端 PHP、MySQL。</span></p>
+            <p class="text-gray">課程外，亦透過自學及社群參與，和業界工程師交流、學習 React 和 SCSS，持續精進自己。</p>
+            <p class="text-gray">作品<a href="https://github.com/a120220ms25/php_cvSystem" class="text-danger">履歷表系統</a>使用 BootStrap5、PHP、MySQL 進行前後端整合開發。請不吝給予指教，謝謝。</p>
           </div>
         </div>
       </div>
@@ -289,9 +284,10 @@
                 <div class="service-Content" >
                   <h3 class="fs-6 fs-md-5 mb-4 text-dark pt-2 ps-2">About me <small>關於我</small></h3>
                   <ul  class="lh-lg">
+                    <li>社會福利學系畢業。畢業後從事社工工作約四年時間，前一份工作是眼鏡公司門市人員。結合社工及服務業的經驗，善於傾聽，也有許多溝通協調的歷練。能獨立作業也喜歡團隊合作。</li>
                     <li>2021/03 ~ Present 泰山職訓 PHP 資料庫網頁設計班</li>
                     <li>2020/05 ~ 2020/08 巨匠 Java 全端程式設計班</li>
-                    <li>從後端開始學習走往前端，透過廣度的學習，了解前後端運作模式和資料串接概念。</li>             
+                    <li>透過廣度的學習，了解前後端運作模式和資料串接概念。</li>             
                   </ul>
                 </div>
               </div>           
@@ -307,8 +303,7 @@
                   <ul>
                      <li class="mb-2  fs-md-6 list-unstyled text-primary fw-bold">前端 : CSS、BootStrap5、Sass、JavaScript、JQuery、React<br></li>
                       <div class="project-text">
-                        <ul class="lh-lg">
-                          <li>重視 HTML structure、語意化標籤的撰寫。</li>
+                        <ul class="lh-lg">                    
                           <li>能依設計稿手刻頁面版型、使用 CSS 動畫效果。</li>
                           <li>BS5 、 SASS 開發經驗、建立 RWD 響應式網頁。</li>
                           <li>了解並會使用 ES6 語言。</li>
@@ -320,8 +315,7 @@
                       <br>
                     <li class="mb-2  fs-md-6 list-unstyled text-primary  fw-bold">後端 : JAVA、PHP、MySQL<br></li>
                     <ul class="lh-lg">
-                        <li>了解基礎 JAVA、PHP、MySQL 程式語法。</li>
-                        <li>能夠使用 PHP PDO 操作 MySQL。</li>                  
+                        <li>了解基礎 JAVA、PHP、MySQL 程式語法。</li>                
                         <li>Oracle-OCPJP Java SE Programmer I 證照</li>
                     </ul><br>  
                     <li class="mb-2 fs-md-6 list-unstyled text-primary  fw-bold">其他 : Photoshop、Illustrator<br></li>
@@ -390,7 +384,7 @@
           <div class="d-none d-md-block lh-md ">
             姓名：陳渝涵 Sabrina<br>
             希望求職地點：台北市、新北市<br>
-            應徵職務：前端工程師<br>
+            應徵職務：web developer<br>
             E-mail：a120220ms25@gmail.com<br>
           </div>
           <a href="mailto:a120220ms25@gmail.com" class="contact-email fs-6 fs-md-4 fs-md-3 p-md-3 fw-bold">Email<i class="ps-1 ps-md-3 fal fa-paper-plane fs-6 fs-md-3"></i></a>
