文字內容修改

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfEmdroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="./css/all.css">
@@ -76,10 +76,10 @@
               <span class="fs-3 word">Sabrina</span>
               <span class="fs-3 word ">Chen</span>            
             </h1>
-            <p class="text-dark fs-5 pe-2 ">您好，我是陳渝涵<a class="fs-4" href="https://github.com/a120220ms25" target="blank"> <i class="fs-4 fab fa-github pb-2 text-dark d-inline">&nbsp;&nbsp;</i></a></p>                   
-            <p class="text-gray">職訓局 PHP 網頁設計班進修，透過半年的期間扎實的學習。<span class="text-dark">熟悉 HTML、CSS、BootStrap、JavaScript 和後端 PHP、MySQL。</span></p>
+            <p class="text-dark fs-5 pe-2 fw-bold">您好，我是陳渝涵<a class="fs-4" href="https://github.com/a120220ms25" target="blank"> <i class="fs-4 fab fa-github pb-2 text-dark d-inline">&nbsp;&nbsp;</i></a></p>                   
+            <p class="text-gray">職訓局 PHP 網頁設計班進修，透過半年的期間扎實的學習。熟悉 <span class="fw-bold">HTML、CSS、BootStrap、JavaScript</span> 和後端 <span class="fw-bold">PHP、MySQL</span>。</p>
             <p class="text-gray">課程外，亦透過自學及社群參與，和業界工程師交流、學習 React 和 SCSS，持續精進自己。</p>
-            <p class="text-gray">作品<a href="https://github.com/a120220ms25/php_cvSystem" class="text-danger">履歷表系統</a>使用 BootStrap5、PHP、MySQL 進行前後端整合開發。請不吝給予指教，謝謝。</p>
+            <p class="text-gray">作品<a href="https://github.com/a120220ms25/php_cvSystem" class="text-primary ">履歷表系統</a>使用 BootStrap5、PHP、MySQL 進行前後端整合開發。請不吝給予指教，謝謝。</p>
           </div>
         </div>
       </div>
